--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.3",
+    "react-number-format": "^5.4.4",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.5",
